# routers/userRouter.js
@@ -1,6 +1,6 @@
 import express from "express"
 import { verifyAdmin, verifyToken } from "../middleware/auth.js"
-import { deleteUser, getAllUsers, getUser } from "../controllers/userController.js"
+import { deleteUser, getAllUsers, getEntityFromToken, getUser } from "../controllers/userController.js"
 import { generateOtp, updatePassword, validateAndVerifyOtp } from "../controllers/otp-updatePasswordController.js"
 export const UserRouter = express.Router()
 UserRouter.get("/", verifyToken, getUser)
@@ -9,3 +9,4 @@ UserRouter.get("/verify-otp", validateAndVerifyOtp)
 UserRouter.patch("/update-password", updatePassword)
 UserRouter.get("/users", verifyToken, getAllUsers)
 UserRouter.delete("/:id", verifyToken, deleteUser)
+UserRouter.get('/get-entity',verifyToken, getEntityFromToken); // Get userId from a certain table
